# BDE

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: bde.cpp  bde.hh  bde.hpp  config.cpp  config.hh  config.hpp  main.cpp
src/lib/: json.hpp
